[metadata]
package_name = astrojoni_tools
description = astrojoni_tools: Some random astronomy-related python tools
long_description = {}
author = Jonas Syed
author_email = syed [at] mpia-hd.mpg.de
license = {}
url = https://github.com/astrojoni89/astrojoni_tools
edit_on_github = True
github_project = astrojoni_tools/astrojoni_tools
# install_requires should be formatted as a comma-separated list, e.g.:
install_requires = astropy, spectral_cube, numpy, tqdm
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
include_package_data = True
package_data = {'': ['data/Reid2019/*']}
version = 0.1.0
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.4
